Add password visibility toggle and enhance .env.example configuration

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,8 @@ PHP_CLI_SERVER_WORKERS=4
 
 BCRYPT_ROUNDS=12
 
+DEBUGBAR_EDITOR=vscode
+
 LOG_CHANNEL=stack
 LOG_STACK=daily
 LOG_DEPRECATIONS_CHANNEL=null
