--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "tenthfeet/enums": "^1.0",
+        "tenthfeet/select-options-helper": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.15",
